        may have been constructed with a 64-bit integer larger than maxInt,
        and calling asInt() would cause an exception. If you're writing new
        code, use isInt64 to find out whether the value is exactly
        representable using an Int64, or asDouble() combined with minInt64 and
        maxInt64 to figure out whether it is approximately representable.

* Bug fixes
  - Patch #3539678: Copy constructor does not initialize allocated_ for stringValue
    (contributed by rmongia).

  - Patch #3600941: Missing field copy in Json::Value::iterator causing infinite 
    loop when using experimental internal map (#define JSON_VALUE_USE_INTERNAL_MAP)
	(contributed by Ming-Lin Kao).
		

  New in JsonCpp 0.6.0:
  ---------------------

* Compilation

  - LD_LIBRARY_PATH and LIBRARY_PATH environment variables are now 
    propagated to the build environment as this is required for some 
    compiler installation.

  - Added support for Microsoft Visual Studio 2008 (bug #2930462): 
    The platform "msvc90" has been added.

    Notes: you need to setup the environment by running vcvars32.bat 
    (e.g. MSVC 2008 command prompt in start menu) before running scons.
    
  - Added support for amalgamated source and header generation (a la sqlite).
    Refer to README.txt section "Generating amalgamated source and header"
    for detail.
    
* Value

  - Removed experimental ValueAllocator, it caused static 
    initialization/destruction order issues (bug #2934500). 
    The DefaultValueAllocator has been inlined in code.
    
  - Added support for 64 bits integer:
  
    Types Json::Int64 and Json::UInt64 have been added. They are aliased
	to 64 bits integers on system that support them (based on __int64 on 
	Microsoft Visual Studio platform, and long long on other platforms).
	
	Types Json::LargestInt and Json::LargestUInt have been added. They are
	aliased to the largest integer type supported: 